# desktop-tui

./: .gitignore  Cargo.toml  README.md  shell.nix
shortcuts/: atac.toml  bluetui.toml  btop.toml  clock.toml  crash.toml  gping.toml  helix.toml  sh.toml  tenki.toml
src/: args.rs  desktop.rs  keyboard.rs  main.rs  shortcut.rs  terminal_emulation.rs  tui_window.rs  utils.rs
