[package]
name = "desktop-tui"
description = "A desktop environment without graphics (tmux-like)"
version = "0.1.0"
edition = "2024"
authors = ["julien-cpsn"]
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Julien-cpsn/desktop-tui"
homepage = "https://github.com/Julien-cpsn/desktop-tui"
repository = "https://github.com/Julien-cpsn/desktop-tui"
keywords = ["Desktop", "Environment", "TUI", "AppCUI-rs"]

[dependencies]
appcui = { version = "0.3.5", features = ["CROSSTERM", "TRUE_COLORS"] }

virtual-terminal = "0.1.4"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
chrono = { version = "0.4.41", features = ["now"] }
tokio = "1.47.1"
async-channel = "2.5.0"
walkdir = "2.5.0"
